Avoid database panic on long check point intervals
Setting a long interval would load to a numeric overflow when converting the millis to nanos.